--- a/App/my-app/package.json
+++ b/App/my-app/package.json
@@ -14,6 +14,8 @@
     "@react-navigation/native-stack": "^6.9.7",
     "expo": "~47.0.9",
     "expo-status-bar": "~1.4.2",
+    "firebase": "^9.15.0",
+    "firebase-tools": "^11.19.0",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
