--- a/App/my-app/package.json
+++ b/App/my-app/package.json
@@ -20,12 +20,14 @@
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
     "react-native-camera": "^4.2.1",
+    "react-native-dotenv": "^3.4.7",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
     "react-native-web": "~0.18.9"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.12.9",
+    "react-error-overlay": "6.0.9"
   },
   "private": true
 }
