--- a/App/my-app/package.json
+++ b/App/my-app/package.json
@@ -21,6 +21,7 @@
     "react-native": "0.70.5",
     "react-native-camera": "^4.2.1",
     "react-native-dotenv": "^3.4.7",
+    "react-native-image-picker": "^5.0.1",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
     "react-native-web": "~0.18.9"
