--- a/App/my-app/package.json
+++ b/App/my-app/package.json
@@ -16,11 +16,14 @@
     "expo-status-bar": "~1.4.2",
     "firebase": "^9.15.0",
     "firebase-tools": "^11.19.0",
+    "native-base": "^3.4.25",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
     "react-native-camera": "^4.2.1",
     "react-native-dotenv": "^3.4.7",
+    "react-native-elements": "^3.4.3",
+    "react-native-reanimated": "~2.12.0",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
     "react-native-web": "~0.18.9"
