--- a/App/my-app/package.json
+++ b/App/my-app/package.json
@@ -24,11 +24,13 @@
     "react-native-camera": "^4.2.1",
     "react-native-dotenv": "^3.4.7",
     "react-native-elements": "^3.4.3",
-    "react-native-reanimated": "~2.12.0",
     "react-native-image-picker": "^5.0.1",
+    "react-native-reanimated": "~2.12.0",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
-    "react-native-web": "~0.18.9"
+    "react-native-web": "~0.18.9",
+    "socket.io": "^4.6.1",
+    "socket.io-client": "^4.6.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
